# axum-server

./: .env  .gitignore  CLAUDE.md  Cargo.toml  answer.md  axum_server.erd.json  codex.md  database_user.md
migrations/: 20260212120308_init.sql  20260311035155_alter_id_varchar32.sql
src/: app.rs  id.rs  lib.rs  main.rs  state.rs  token.rs
src/api/: auth.rs  mod.rs  user.rs
src/lib/: token.rs
src/mqtt/: broker.rs  client.rs  mod.rs  topic.rs
