[package]
name = "axum_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = {version = "0.12.5", features = ["typed-header"]}
chrono = "0.4.43"
dotenvy = "0.15.7"
jsonwebtoken = {version = "10.3.0", features = ['aws_lc_rs']}
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "time"] }
tokio = { version = "1.49.0", features = ["full"] }
ulid = "1.2.1"
bytes = "1"
mqttbytes = "0.1"
